Update splash image source in index.html

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 <body>
 
     <div id="splash-screen">
-        <img src="1769312279088.jpg" id="splash-image" alt="LEGIÓN SCARFACE">
+        <img src="NOMBRE_DE_TU_IMAGEN.jpg" id="splash-image" alt="LEGIÓN SCARFACE">
         <div class="loading-text">AUTENTICANDO ACCESO...</div>
     </div>
 
