Update splash image source in index.html

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 <body>
 
     <div id="splash-screen">
-        <img src="NOMBRE_DE_TU_IMAGEN.jpg" id="splash-image" alt="SCARFACE">
+        <img src="1769312279088.jpg" id="splash-image" alt="SCARFACE">
         <div class="loading-text">ESTABLECIENDO CONEXIÓN P2P...</div>
     </div>
 
