Enhance terminal with watermark background
Added a watermark background to the terminal and adjusted z-index properties for better layering.

--- a/index.html
+++ b/index.html
@@ -91,11 +91,33 @@
         .cia-header { border: 1px solid #fff; color: #fff; font-size: 0.7rem; text-align: center; padding: 5px; margin-bottom: 5px; }
         .phrase { font-size: 0.65rem; color: var(--blood-red); text-align: center; margin: 5px 0; text-transform: uppercase; }
 
-        .terminal { flex: 1; overflow-y: auto; padding: 15px; font-size: 13px; scroll-behavior: smooth; }
-        .msg-line { margin-bottom: 8px; border-left: 2px solid #222; padding-left: 8px; }
+        /* MODIFICACIÓN: Terminal con marca de agua */
+        .terminal { 
+            flex: 1; 
+            overflow-y: auto; 
+            padding: 15px; 
+            font-size: 13px; 
+            scroll-behavior: smooth; 
+            position: relative; 
+        }
+
+        .terminal::before {
+            content: "";
+            position: absolute;
+            top: 50%; left: 50%;
+            transform: translate(-50%, -50%);
+            width: 80%; height: 80%;
+            background: url('legión-scarface.png') no-repeat center;
+            background-size: contain;
+            opacity: 0.07; /* Sutil marca de agua */
+            pointer-events: none;
+            z-index: -1;
+        }
+
+        .msg-line { margin-bottom: 8px; border-left: 2px solid #222; padding-left: 8px; position: relative; z-index: 1; }
         .timestamp { color: #555; font-size: 0.7rem; margin-right: 5px; }
         
-        .input-area { background: #000; padding: 12px; display: flex; align-items: center; border-top: 1px solid #333; gap: 10px; }
+        .input-area { background: #000; padding: 12px; display: flex; align-items: center; border-top: 1px solid #333; gap: 10px; z-index: 10; }
         #command-line { flex: 1; background: transparent; border: none; color: var(--neon-green); outline: none; font-family: inherit; font-size: 16px; }
         .clip-btn { color: var(--blood-red); font-size: 1.5rem; cursor: pointer; padding: 0 5px; }
         .guide-btn { color: #fff; font-size: 1.2rem; cursor: pointer; padding: 0 5px; opacity: 0.7; transition: 0.3s; }
@@ -106,6 +128,7 @@
             .cia-header { font-size: 1rem; padding: 10px; }
             .phrase { font-size: 0.85rem; }
             .terminal { font-size: 15px; padding: 30px; }
+            .terminal::before { width: 50%; height: 50%; } /* Escudo más centrado en PC */
         }
     </style>
 </head>
